# aniluv

./: .prettierignore  .prettierrc  LICENSE  README.md  index.html  package-lock.json  package.json  tailwind.config.cjs  tsconfig.json  vite.config.ts
.github/workflows/: release.yml
src/: App.svelte  main.ts  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src-tauri/src/http/: client.rs
src-tauri/src/providers/: mod.rs
src-tauri/src/providers/gogoanime/: episode.rs  info.rs  mod.rs  popular.rs  search.rs  trending.rs
src/components/: About.svelte  AnilistUpdate.svelte  Card.svelte  DotLoading.svelte  DropDown.svelte  Login.svelte  Search.svelte
src/components/anilist/: AnilistUpdate.svelte
src/components/handling/: Error.svelte  Loading.svelte
src/components/languages/: ToggleLang.svelte
src/components/player/: OtherIndexCard.svelte  TvIndexCard.svelte
src/components/provider/: ToggleProvider.svelte
src/components/suggestions/: Card.svelte  OtherIndexCard.svelte  TvIndexCard.svelte
src/lib/: anilist-client.ts  anilist-login.ts  anilist-types.ts  http-client.ts
src/lib/anilist/: anilist-client.ts  anilist-login.ts  anilist-type.ts
src/lib/gogo/: gogo-client.ts  gogo-types.ts
src/lib/player/: subtitles.ts
src/routes/: Home.svelte  Player.svelte
